<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BuildQuestion">

    <RadioGroup
        android:id="@+id/bu_rp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="424dp"
            android:layout_height="35dp"
            android:text="@string/Bu_EnterId"
            android:textColor="#000000"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="id"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bu_title"
            android:textColor="#000000"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/ra_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bu_single" />

        <RadioButton
            android:id="@+id/ra_m"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bu_multiple" />

        <!--       <RadioButton
            android:id="@+id/ra_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bu_fill" />-->


    </RadioGroup>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="318dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Bu_question_title"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_question_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_below="@+id/textView7"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPersonName"
            android:text=" "
            tools:ignore="LabelFor" />


        <TextView
            android:id="@+id/v_op1"
            android:layout_width="70dp"
            android:layout_height="46dp"
            android:layout_below="@+id/edit_question_title"
            android:text="OP1:"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_option1"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_question_title"
            android:layout_alignEnd="@+id/v_op1"
            android:layout_alignRight="@+id/v_op1"
            android:text=" "
            android:layout_marginEnd="-336dp"
            android:layout_marginRight="-336dp" />

        <TextView
            android:id="@+id/v_op2"
            android:layout_width="70dp"
            android:layout_height="46dp"
            android:layout_below="@+id/v_op1"
            android:text="OP2:"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_option2"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_option1"
            android:layout_alignEnd="@+id/v_op2"
            android:layout_alignRight="@+id/v_op2"
            android:text=" "
            android:layout_marginEnd="-336dp"
            android:layout_marginRight="-336dp" />

        <TextView
            android:id="@+id/v_op3"
            android:layout_width="70dp"
            android:layout_height="46dp"
            android:layout_below="@+id/v_op2"
            android:text="OP3:"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_option3"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_option2"
            android:text=" "
            android:layout_alignEnd="@+id/v_op3"
            android:layout_alignRight="@+id/v_op3"
            android:layout_marginEnd="-336dp"
            android:layout_marginRight="-336dp" />

        <TextView
            android:id="@+id/v_op4"
            android:layout_width="70dp"
            android:layout_height="46dp"
            android:layout_below="@+id/v_op3"
            android:text="OP4:"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_option4"
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_option3"
            android:layout_alignEnd="@+id/v_op4"
            android:layout_alignRight="@+id/v_op4"
            android:text=" "
            android:layout_marginEnd="-336dp"
            android:layout_marginRight="-336dp" />

        <Button
            android:id="@+id/btn_add_question"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:layout_below="@+id/edit_option4"
            android:background="#4CAF50"
            android:text="@string/Bu_add_question" />
        <!--            <Button
            android:id="@+id/btn_add_option"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:background="#FF9800"
            android:text="@string/Bu_add_option" />-->

    </RelativeLayout>

    <Button
        android:id="@+id/btn_build_finish"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="#03A9F4"
        android:text="@string/Rport_btn"
        android:textColor="#000000"
        android:textSize="24sp" />


</LinearLayout>


